<resources>
    <string name="app_name">WeatherJournal2</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="time">time</string>
    <string name="_20">20</string>
    <string name="city_name">City Name</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="condition">Condition</string>
    <string name="today_s_forecast">Today\'s forecast</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="plus">+</string>
    <string name="log_in">Log In</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="new_post">New post</string>
    <string name="location_icon">Location Icon</string>
    <string name="location">Location</string>
</resources>