<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black_shade_1"
    tools:context=".ui.home.HomeFragment"
    >

    <RelativeLayout
        android:id="@+id/idRLHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ProgressBar
            android:id="@+id/idPBLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/idIVBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/black_shade_1" />

        <TextView
            android:id="@+id/idTVCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/idLLEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/idTVCityName"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/enter_city_name"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/idIVSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/idTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLLEdit"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/_20"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <ImageView
            android:id="@+id/idIVIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/idTVCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVIcon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idTVForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCondition"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/today_s_forecast"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCondition"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/idTVWhatsNewIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:layout_below="@id/idRVWeather"
            android:textSize="20sp"
            android:padding="20sp"
            android:text="dscvdccd"
            android:textStyle="italic"
            android:textAlignment="center"
            android:background="@color/black_shade_1" />

        <LinearLayout
            android:id="@+id/postsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVWhatsNewIn"
            android:orientation="vertical"
            android:layout_marginBottom="100dp">

        </LinearLayout>

    </RelativeLayout>

</ScrollView>